--- a/client/src/pages/Dashboard/Dashboard.scss
+++ b/client/src/pages/Dashboard/Dashboard.scss
@@ -1,9 +1,12 @@
 .dashboard {
-  padding: 32px;
-  max-width: 1200px;
-  margin: 0 auto;
   width: 100%;  /* Bunu ekle */
-  box-sizing: border-box; /* Padding dahil */
+/*   padding: 32px;
+ */  max-width: 1200px; 
+  margin: 0 auto;
+  min-height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
+
 
  
 .dashboard-header {
@@ -16,7 +19,7 @@
 .dashboard-title {
   font-size: 32px;
   font-weight: 700;
-  color: var(--text-primary);
+  color: var(--logoblue);
 }
 
 .exam-selection {
@@ -89,7 +92,7 @@
 
 .feature-icon {
   width: 100px;
-  height: px;
+  height: 100px;
   border-radius: 12px;
   background-color: white; 
   display: flex;
@@ -119,8 +122,10 @@
 
 @media (max-width: 640px) {
   .dashboard {
-    padding: 16px;
-  }
+/*     padding: 16px;
+
+ */ margin-left: 0 !important;
+    width: 100% !important; }
 
   .dashboard-title {
     font-size: 24px;
